----------
v4.3.0-git
----------

[mjr] Fix display of recurring multi-day events ("Pascal Rigaux"
      <pascal.rigaux@univ-paris1.fr>).
[jan] Only export the timezone rules required for an event to iCalendar
      objects.
[jan] Show timezone abbreviations in event dialog too.
[jan] Show users' full names in share dialogs.
[mjr] Support for subset of features of ActiveSync 16.0.
[mjr] Disconnect exceptions from base event when series changes.
[mjr] Support file attachments to events (Request #2009).
[mjr] Add ability to prevent any iTip notifications from being sent (Request
      #14157).
[mjr] Remove maps configuration, replaced by global maps configuration (Bug
      #14168).
[mjr] Show created/last-modified info on event view (Request #10715).
[jan] Allow to edit system calendars in dynamic view.
[jan] Add support for monthly recurrence on last weekday (Request #1922).
[jan] Send event update notifications with HTML part.
[mjr] Resource permissions have been implemented (Request #13647).
[jan] Add refresh button to individual calendars and task lists.
[mjr] Enforce case on attendee user part, but add attendee to event if only
      only the case differs (Bug #13905).
[jan] Keep original file names when PUTing events via WebDAV.
[jan] Remove configuration options for database tables.
[mjr] Honor the UID value sent from EAS clients directly in the message
      structure.
[jan] Add entries for Tasks and Agenda to top menu.
[mjr] Add Kronolith_Api::move().
[jan] Return ETags with browse() API method.
[jan] Add importing of calendar data from a URL.


-------
v4.2.17
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix issue where it is possible to save an event with an empty start or
      end date on some browsers.
[mjr] Require Horde_Perms::DELETE for including a calendar as sync-able.
[mjr] Fix end date when toggling an all day event off (Bug #13979).
[jan] Fix showing error message if loading of remote calendars failed.

