@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Remove dependency on PEAR&apos;s Date package.
 * [mjr] Fix display of recurring multi-day events ("Pascal Rigaux" &lt;pascal.rigaux@univ-paris1.fr&gt;).
 * [jan] Only export the timezone rules required for an event to iCalendar objects.
 * [jan] Show timezone abbreviations in event dialog too.
@@ -1069,10 +1070,6 @@
     <min>2.0.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
-   </package>
-   <package>
-    <name>Date</name>
-    <channel>pear.php.net</channel>
    </package>
    <extension>
     <name>gettext</name>
@@ -2814,6 +2811,7 @@
    <date>2016-05-12</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Remove dependency on PEAR&apos;s Date package.
 * [mjr] Fix display of recurring multi-day events ("Pascal Rigaux" &lt;pascal.rigaux@univ-paris1.fr&gt;).
 * [jan] Only export the timezone rules required for an event to iCalendar objects.
 * [jan] Show timezone abbreviations in event dialog too.
